# lotto-pattern

./: .gitignore  .pre-commit-config.yaml  README.md  bandit.yaml  pyproject.toml
lotto/: .env.dist
lotto/lotto/: asgi.py  env.py  settings.py  urls.py  wsgi.py
